--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- English string resources -->
     <string name="app_name">OneUIExample</string>
+    <string name="settings">Settings</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="dark_mode_on">Dark mode enabled</string>
+    <string name="dark_mode_off">Dark mode disabled</string>
+    <string name="language">Language</string>
+    <string name="notifications">Notifications</string>
+    <string name="notifications_on">Notifications enabled</string>
+    <string name="notifications_off">Notifications disabled</string>
+    <string name="english">English</string>
+    <string name="arabic">Arabic</string>
 </resources>
