--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Arabic string resources -->
-    <string name="app_name">تطبيقي</string>
+    <string name="app_name">مثال One UI</string>
     <string name="settings">الإعدادات</string>
     <string name="dark_mode">الوضع الداكن</string>
     <string name="dark_mode_on">تم تفعيل الوضع الداكن</string>
