--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- English string resources -->
+    <!-- App -->
     <string name="app_name">OneUIExample</string>
+    <string name="welcome_message">Welcome to One UI Example!</string>
+
+    <!-- Settings -->
     <string name="settings">Settings</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="dark_mode_on">Dark mode enabled</string>
