--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Arabic string resources -->
+    <!-- App -->
     <string name="app_name">مثال One UI</string>
+    <string name="welcome_message">مرحبًا بك في مثال One UI!</string>
+
+    <!-- Settings -->
     <string name="settings">الإعدادات</string>
     <string name="dark_mode">الوضع الداكن</string>
     <string name="dark_mode_on">تم تفعيل الوضع الداكن</string>
