--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- App -->
+    <!-- Arabic string resources -->
     <string name="app_name">مثال One UI</string>
-    <string name="welcome_message">مرحبًا بك في مثال One UI!</string>
-
-    <!-- Settings -->
+    <string name="home">الرئيسية</string>
     <string name="settings">الإعدادات</string>
     <string name="dark_mode">الوضع الداكن</string>
     <string name="dark_mode_on">تم تفعيل الوضع الداكن</string>
