--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- English string resources -->
     <string name="app_name">OneUIExample</string>
     <string name="home">Home</string>
     <string name="settings">Settings</string>
+    <string name="scroll_menu">Scroll Menu</string>
+    <string name="welcome_message">Welcome to One UI Example!</string>
+    <string name="button_label">One UI Button</string>
     <string name="dark_mode">Dark Mode</string>
-    <string name="dark_mode_on">Dark mode enabled</string>
-    <string name="dark_mode_off">Dark mode disabled</string>
     <string name="language">Language</string>
     <string name="notifications">Notifications</string>
-    <string name="notifications_on">Notifications enabled</string>
-    <string name="notifications_off">Notifications disabled</string>
     <string name="english">English</string>
     <string name="arabic">Arabic</string>
 </resources>
