--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Arabic string resources -->
     <string name="app_name">مثال One UI</string>
     <string name="home">الرئيسية</string>
     <string name="settings">الإعدادات</string>
+    <string name="scroll_menu">قائمة التمرير</string>
+    <string name="welcome_message">مرحبًا بك في مثال One UI!</string>
+    <string name="button_label">زر One UI</string>
     <string name="dark_mode">الوضع الداكن</string>
-    <string name="dark_mode_on">تم تفعيل الوضع الداكن</string>
-    <string name="dark_mode_off">تم تعطيل الوضع الداكن</string>
     <string name="language">اللغة</string>
     <string name="notifications">الإشعارات</string>
-    <string name="notifications_on">تم تفعيل الإشعارات</string>
-    <string name="notifications_off">تم تعطيل الإشعارات</string>
     <string name="english">الإنجليزية</string>
     <string name="arabic">العربية</string>
 </resources>
